tests/ui/coroutine/unsized-local-across-yield.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-local-across-yield.rs:9:13
   |
LL |         let b: [u8] = *(Box::new([]) as Box<[u8]>);
   |             ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
help: consider borrowing here
   |
LL |         let b: &[u8] = *(Box::new([]) as Box<[u8]>);
   |                +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
